# routes/chatApplicationData.js
@@ -7,6 +7,9 @@ const {
     chatAccess,
     fetchChatData,
     createGroupChat,
+    renameGroupChatName,
+    addMemberToGroup,
+    removeMemberFromGroup,
 } = require('../controllers/chatApplicationData');
 const { authenticate } = require('../middleware/authurize');
 // import validators
@@ -14,5 +17,8 @@ const { authenticate } = require('../middleware/authurize');
 router.post('/user-chat-access', authenticate, chatAccess);
 router.get('/fetch-chat-data', authenticate, fetchChatData);
 router.post('/create-group-chat', authenticate, createGroupChat);
+router.put('/rename-group-chat-name', authenticate, renameGroupChatName);
+router.put('/add-member-to-group', authenticate, addMemberToGroup);
+router.put('/remove-member-from-group', authenticate, removeMemberFromGroup);
 
 module.exports = router;
