# swagger.json
@@ -306,7 +306,7 @@
       "post": {
         "tags": ["Chat Application API"],
         "summary": "chat access",
-        "description": "this api will receive user id from frontend body in json format. And will create chat with that user id.<br />like you will click on a user and you will be able to chat with him by sending the id in the server as json data:",
+        "description": "this api will receive user id from frontend body in json format. And will create chat with that  particular user id.<br />like you will click on a user and you will be able to chat with him by sending the id in the server as json data:",
         "consumes": ["application/json"],
         "produces": ["application/json"],
         "parameters": [
@@ -350,7 +350,7 @@
       "get": {
         "tags": ["Chat Application API"],
         "summary": "chat fetch",
-        "description": "this api will give you chat data from db. like me and sumon chatted before. this api will give me that data:.Also i have chatted in  a group. it will also show that data.It will show all the chat history",
+        "description": "this api will give you chat data from db. like me and sumon chatted before. this api will give me that data:.Also i have chatted in  a group. it will also show that group chat data.It will show all the chat history",
         "consumes": ["application/json"],
         "produces": ["application/json"],
         "parameters": [
@@ -408,6 +408,150 @@
                     "6409d154ad423af4416aaea5",
                     "640bfe8dec5075824497f423"
                   ]
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/api/rename-group-chat-name": {
+      "put": {
+        "tags": ["Chat Application API"],
+        "summary": "rename group chat name",
+        "description": "This api will receive `chatId & chatName` from frontend as json object data. <br /> like if you rename with thegroup then send the chat id and chatname data from body from frontend ",
+        "consumes": ["application/json"],
+        "produces": ["application/json"],
+        "parameters": [
+          {
+            "in": "header",
+            "type": "string",
+            "name": "Authorization",
+            "description": "Access Token",
+            "required": true
+          },
+          {
+            "in": "body",
+            "name": "body",
+            "description": " `chatId`, `chatName` needs to send from body of the client side as json object.",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "chatId": {
+                  "type": "string",
+                  "example": "641925ad9ccf5e141c15136c"
+                },
+                "chatName": {
+                  "type": "string",
+                  "example": "chat-imran-2"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/api/add-member-to-group": {
+      "put": {
+        "tags": ["Chat Application API"],
+        "summary": "Add member to the group",
+        "description": "Suppose you are admin in a group.So you can add a user as a member of the group so that he can chat.<br /> Api will receive `chatId` and `userId` from the frontend as json object data. ",
+        "consumes": ["application/json"],
+        "produces": ["application/json"],
+        "parameters": [
+          {
+            "in": "header",
+            "type": "string",
+            "name": "Authorization",
+            "description": "Access Token",
+            "required": true
+          },
+          {
+            "in": "body",
+            "name": "body",
+            "description": " `chatId`, `userId` needs to send from body of the client side as json object.",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "chatId": {
+                  "type": "string",
+                  "example": "641925ad9ccf5e141c15136c"
+                },
+                "userId": {
+                  "type": "string",
+                  "example": "640c56d5875e12ae58fdd1cd"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/api/remove-member-from-group": {
+      "put": {
+        "tags": ["Chat Application API"],
+        "summary": "Remove member from your group",
+        "description": "Suppose you are admin in a group.So you can remove a user  from the group so that he can not chat.<br /> Api will receive `chatId` and `userId` from the frontend as json object data. ",
+        "consumes": ["application/json"],
+        "produces": ["application/json"],
+        "parameters": [
+          {
+            "in": "header",
+            "type": "string",
+            "name": "Authorization",
+            "description": "Access Token",
+            "required": true
+          },
+          {
+            "in": "body",
+            "name": "body",
+            "description": " `chatId`, `userId` needs to send from body of the client side as json object.",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "chatId": {
+                  "type": "string",
+                  "example": "641925ad9ccf5e141c15136c"
+                },
+                "userId": {
+                  "type": "string",
+                  "example": "640c56d5875e12ae58fdd1cd"
                 }
               }
             }
